# VFIEval

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENT.md  NAVIGATION.md  README.md  REPO_LAYOUT.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
.github/workflows/: quality.yml
checkpoints/test_checkpoint/: latest.pth
contracts/: public_surface.json
docs/: deployment-windows-relay.md  feature-distance-metrics.md  index.html  release-validation.md
examples/: __init__.py
examples/models/: __init__.py  average_flow_mask.py
models/: _test_helpers.py  test_average.py  test_bad_shape.py  test_checkpoint.py  test_device_dtype.py  test_dict_return.py  test_exception.py  test_img0.py  test_img1.py  test_lowres.py  test_tuple_return.py
plans/: 0711_plan1.md
scripts/: archive_file_backups.py  generate_test_assets.py  windows_tcp_relay.ps1
src/vfieval/: __init__.py  _build_info.json  alignment.py  api_validation.py  cli.py  (+32 more)
tests/: test_alignment_plan.py  test_api_modules.py  test_artifact_integrity.py  test_artifact_profiles.py  test_cache_coordination.py  test_campaign_freeze_pipeline.py  test_campaign_v2_migrations.py  test_catalog_sync.py  test_cli_read_only.py  test_compare_multitrack.py  test_compare_snapshot_cleanup.py  test_compare_sources_api.py  test_compare_ui_hooks.py  test_db_indices.py  test_decode_cache_coordination.py  test_decode_progress.py  test_diagnostics_target_logs.py  test_doctor_capabilities.py  test_end_to_end.py  test_evaluation_campaigns.py  test_evaluation_campaigns_v2.py  test_evaluation_studio_polish.py  test_evaluation_studio_ui.py  test_evaluation_v2_http.py  test_experiment_experience_ui.py  test_frontend_shared_primitives.py  test_input_identity.py  test_job_leases.py  test_job_supervisor.py  test_legacy_campaign_ui_read_only.py  test_lifecycle_cas_regressions.py  test_main_ui_polish.py  test_media_catalog_uploads.py  test_media_identity_invariants.py  test_media_items.py  test_media_items_service.py  test_media_selection_tokens.py  test_metric_asset_install.py  test_metric_health_cache.py  test_metrics.py  (+27 more)
tools/: build_release.py  release_smoke.py
(+50 files in other folders)
