[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vfieval"
version = "0.1.0"
description = "Video frame interpolation inference, post-processing, evaluation, and comparison platform."
requires-python = ">=3.10"
authors = [{ name = "VFIEval" }]

[project.scripts]
vfieval = "vfieval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vfieval = ["web/*"]
