[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vfieval"
version = "0.1.0"
description = "Video frame interpolation inference, post-processing, evaluation, and comparison platform."
requires-python = ">=3.10"
authors = [{ name = "VFIEval" }]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "Pillow>=9.0",
    "opencv-python>=4.5",
]

[project.optional-dependencies]
npu = ["torch-npu>=2.1"]
dev = ["ruff", "mypy"]
test = ["Pillow"]
release = ["build>=1.2"]

[project.scripts]
vfieval = "vfieval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vfieval = ["_build_info.json", "web/*"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
